# sem_mitochondria_quant

./: .gitignore  01_annotate_regions.ipynb  02_segment_axons.ipynb  03_process_axon_masks.ipynb  04_segment_mitos.ipynb  04_segment_mitos.py  05_process_mitos.ipynb  06_analyze_mitos.ipynb  pyproject.toml  utils.py
configs/: example_config.json
notebooks/: 01_draw_analysis_regions.ipynb  02_segment_axons.ipynb  03_process_axon_masks.ipynb  04_segment_mitos.ipynb  05_process_and_classify_mitos.ipynb  06_analyze_mitos.ipynb  250415_mito_classifier copy.ipynb  x01_prep_2_annotate.ipynb
scripts/: run_pipeline.py
sem_quant/: data_utils.py  fastai_utils.py  load_config.py  processing_utils.py  sam_utils.py  utils.py
sem_quant/pipeline_steps/: classify_mitos.py  process_axons.py  process_mitos.py  segment_axons.py  segment_mitos.py
